@@ -23,8 +23,8 @@ import static org.apache.openmeetings.db.util.TimezoneUtil.getTimeZone;
 import static org.apache.openmeetings.util.CalendarPatterns.ISO8601_FULL_FORMAT_STRING;
 import static org.apache.openmeetings.util.OpenmeetingsVariables.CONFIG_DASHBOARD_SHOW_MYROOMS;
 import static org.apache.openmeetings.util.OpenmeetingsVariables.CONFIG_DASHBOARD_SHOW_RSS;
-import static org.apache.openmeetings.util.OpenmeetingsVariables.CONFIG_MYROOMS_ENABLED;
 import static org.apache.openmeetings.util.OpenmeetingsVariables.getDefaultLang;
+import static org.apache.openmeetings.util.OpenmeetingsVariables.isMyRoomsEnabled;
 import static org.apache.openmeetings.web.app.Application.getAuthenticationStrategy;
 import static org.apache.openmeetings.web.app.Application.getDashboardContext;
 import static org.apache.openmeetings.web.app.Application.isInvaldSession;
@@ -46,11 +46,13 @@ import org.apache.openmeetings.core.ldap.LdapLoginManager;
 import org.apache.openmeetings.db.dao.basic.ConfigurationDao;
 import org.apache.openmeetings.db.dao.label.LabelDao;
 import org.apache.openmeetings.db.dao.room.InvitationDao;
+import org.apache.openmeetings.db.dao.room.RoomDao;
 import org.apache.openmeetings.db.dao.server.SOAPLoginDao;
 import org.apache.openmeetings.db.dao.server.SessiondataDao;
 import org.apache.openmeetings.db.dao.user.GroupDao;
 import org.apache.openmeetings.db.dao.user.UserDao;
 import org.apache.openmeetings.db.entity.room.Invitation;
+import org.apache.openmeetings.db.entity.room.Room;
 import org.apache.openmeetings.db.entity.server.RemoteSessionObject;
 import org.apache.openmeetings.db.entity.server.SOAPLogin;
 import org.apache.openmeetings.db.entity.server.Sessiondata;
@@ -62,6 +64,7 @@ import org.apache.openmeetings.db.util.AuthLevelUtil;
 import org.apache.openmeetings.db.util.FormatHelper;
 import org.apache.openmeetings.db.util.LocaleHelper;
 import org.apache.openmeetings.util.OmException;
+import org.apache.openmeetings.web.pages.HashPage;
 import org.apache.openmeetings.web.user.dashboard.MyRoomsWidget;
 import org.apache.openmeetings.web.user.dashboard.MyRoomsWidgetDescriptor;
 import org.apache.openmeetings.web.user.dashboard.RssWidget;
@@ -70,6 +73,7 @@ import org.apache.openmeetings.web.user.dashboard.StartWidgetDescriptor;
 import org.apache.openmeetings.web.user.dashboard.WelcomeWidgetDescriptor;
 import org.apache.openmeetings.web.user.dashboard.admin.AdminWidget;
 import org.apache.openmeetings.web.user.dashboard.admin.AdminWidgetDescriptor;
+import org.apache.openmeetings.web.user.rooms.RoomEnterBehavior;
 import org.apache.openmeetings.web.util.ExtendedClientProperties;
 import org.apache.openmeetings.web.util.OmUrlFragment;
 import org.apache.openmeetings.web.util.UserDashboard;
@@ -77,7 +81,11 @@ import org.apache.wicket.authentication.IAuthenticationStrategy;
 import org.apache.wicket.authroles.authentication.AbstractAuthenticatedWebSession;
 import org.apache.wicket.authroles.authorization.strategies.role.Roles;
 import org.apache.wicket.injection.Injector;
+import org.apache.wicket.request.IRequestParameters;
 import org.apache.wicket.request.Request;
+import org.apache.wicket.request.cycle.RequestCycle;
+import org.apache.wicket.request.flow.RedirectToUrlException;
+import org.apache.wicket.request.mapper.parameter.PageParameters;
 import org.apache.wicket.spring.injection.annot.SpringBean;
 import org.apache.wicket.util.string.StringValue;
 import org.apache.wicket.util.string.Strings;
@@ -101,10 +109,10 @@ public class WebSession extends AbstractAuthenticatedWebSession implements IWebS
 	private OmUrlFragment area = null;
 	private TimeZone tz;
 	private TimeZone browserTz;
-	private FastDateFormat ISO8601FORMAT = null;
+	private FastDateFormat iso8601Format = null;
 	private FastDateFormat  sdf = null;
 	private UserDashboard dashboard;
-	private Invitation i = null;
+	private Invitation invitation = null;
 	private SOAPLogin soap = null;
 	private Long roomId = null;
 	private Long recordingId = null;
@@ -126,6 +134,8 @@ public class WebSession extends AbstractAuthenticatedWebSession implements IWebS
 	private LdapLoginManager ldapManager;
 	@SpringBean
 	private ConfigurationDao cfgDao;
+	@SpringBean
+	private RoomDao roomDao;
 
 	public WebSession(Request request) {
 		super(request);
@@ -137,11 +147,11 @@ public class WebSession extends AbstractAuthenticatedWebSession implements IWebS
 		cm.invalidate(userId, getId());
 		super.invalidate();
 		userId = null;
-		rights = Collections.unmodifiableSet(Collections.<Right>emptySet());
-		ISO8601FORMAT = null;
+		rights = Set.of();
+		iso8601Format = null;
 		sdf = null;
 		languageId = -1;
-		i = null;
+		invitation = null;
 		soap = null;
 		roomId = null;
 		recordingId = null;
@@ -189,50 +199,105 @@ public class WebSession extends AbstractAuthenticatedWebSession implements IWebS
 		return userId != null && userId.longValue() > 0;
 	}
 
-	public void checkHashes(StringValue secure, StringValue invitation) {
+	private void redirectHash(Room r, Runnable nullAction) {
+		if (r != null) {
+			String url = cm.getServerUrl(r, baseUrl -> {
+				PageParameters params = new PageParameters();
+				IRequestParameters reqParams = RequestCycle.get().getRequest().getQueryParameters();
+				reqParams.getParameterNames().forEach(name -> params.add(name, reqParams.getParameterValue(name)));
+				return Application.urlForPage(HashPage.class
+						, params
+						, baseUrl);
+			});
+			if (url == null) {
+				nullAction.run();
+			} else {
+				throw new RedirectToUrlException(url);
+			}
+		}
+	}
+
+	public void checkHashes(StringValue secure, StringValue inviteStr) {
+		log.debug("checkHashes, secure: '{}', invitation: '{}'", secure, inviteStr);
 		try {
+			log.debug("checkHashes, has soap in session ? '{}'", (soap != null));
 			if (!secure.isEmpty() && (soap == null || !soap.getHash().equals(secure.toString()))) {
 				// otherwise already logged-in with the same hash
 				if (isSignedIn()) {
+					log.debug("secure: Session is authorized, going to invalidate");
 					invalidateNow();
 				}
 				signIn(secure.toString(), true);
 			}
-			if (!invitation.isEmpty() && (i == null || !i.getHash().equals(invitation.toString()))) {
+			if (!inviteStr.isEmpty()) {
+				// invitation should be re-checked each time, due to PERIOD invitation can be
+				// 1) not ready
+				// 2) already expired
 				// otherwise already logged-in with the same hash
 				if (isSignedIn()) {
+					log.debug("invitation: Session is authorized, going to invalidate");
 					invalidateNow();
 				}
-				i = inviteDao.getByHash(invitation.toString(), false, true);
-				if (i != null && i.isAllowEntry()) {
+				invitation = inviteDao.getByHash(inviteStr.toString(), false);
+				Room r = null;
+				if (invitation != null && invitation.isAllowEntry()) {
 					Set<Right> hrights = new HashSet<>();
-					if (i.getRoom() != null) {
-						hrights.add(Right.ROOM);
-						roomId = i.getRoom().getId();
-					} else if (i.getAppointment() != null && i.getAppointment().getRoom() != null) {
-						hrights.add(Right.ROOM);
-						roomId = i.getAppointment().getRoom().getId();
-					} else if (i.getRecording() != null) {
-						recordingId = i.getRecording().getId();
+					if (invitation.getRoom() != null) {
+						r = invitation.getRoom();
+					} else if (invitation.getAppointment() != null && invitation.getAppointment().getRoom() != null) {
+						r = invitation.getAppointment().getRoom();
+					} else if (invitation.getRecording() != null) {
+						recordingId = invitation.getRecording().getId();
 					}
-					setUser(i.getInvitee(), hrights);
+					if (r != null) {
+						redirectHash(r, () -> inviteDao.markUsed(invitation));
+						hrights.add(Right.ROOM);
+						roomId = r.getId();
+					}
+					setUser(invitation.getInvitee(), hrights);
 				}
 			}
+		} catch (RedirectToUrlException e) {
+			throw e;
 		} catch (Exception e) {
 			log.error("Unexpected exception while checking hashes", e);
 		}
 	}
 
+	public void checkToken(StringValue intoken) {
+		cm.getToken(intoken).ifPresent(token -> {
+			invalidateNow();
+			signIn(userDao.get(token.getUserId()));
+			log.debug("Cluster:: Token for room {} is found, signedIn ? {}", token.getRoomId(), userId != null);
+			area = RoomEnterBehavior.getRoomUrlFragment(token.getRoomId());
+		});
+	}
+
 	public boolean signIn(String secureHash, boolean markUsed) {
 		SOAPLogin soapLogin = soapDao.get(secureHash);
 		if (soapLogin == null) {
+			log.warn("Secure hash not found in DB");
 			return false;
 		}
+		log.debug("Secure hash found, is used ? {}", soapLogin.isUsed());
 		if (!soapLogin.isUsed() || soapLogin.getAllowSameURLMultipleTimes()) {
 			Sessiondata sd = sessionDao.check(soapLogin.getSessionHash());
+			log.debug("Do we have data for hash ? {}", (sd.getXml() != null));
 			if (sd.getXml() != null) {
 				RemoteSessionObject remoteUser = RemoteSessionObject.fromString(sd.getXml());
-				if (remoteUser != null && !Strings.isEmpty(remoteUser.getExternalId())) {
+				log.debug("Hash data was parsed successfuly ? {}, containg exterlaId ? {}", (remoteUser != null), !Strings.isEmpty(remoteUser.getExternalId()));
+				if (!Strings.isEmpty(remoteUser.getExternalId())) {
+					Room r;
+					if (Strings.isEmpty(soapLogin.getExternalRoomId()) || Strings.isEmpty(soapLogin.getExternalType())) {
+						r = roomDao.get(soapLogin.getRoomId());
+					} else {
+						r = roomDao.getExternal(soapLogin.getExternalType(), soapLogin.getExternalRoomId());
+					}
+					if (r == null) {
+						log.warn("Room was not found");
+					} else {
+						redirectHash(r, () -> {});
+					}
 					User user = userDao.getExternalUser(remoteUser.getExternalId(), remoteUser.getExternalType());
 					if (user == null) {
 						user = getNewUserInstance(null);
@@ -257,17 +322,19 @@ public class WebSession extends AbstractAuthenticatedWebSession implements IWebS
 						soapLogin.setUseDate(new Date());
 						soapDao.update(soapLogin);
 					}
-					roomId = soapLogin.getRoomId();
+					roomId = r == null ? null : r.getId();
 					sd.setUserId(user.getId());
 					sd.setRoomId(roomId);
 					sessionDao.update(sd);
 					setUser(user, null);
 					recordingId = soapLogin.getRecordingId();
 					soap = soapLogin;
+					log.info("Hash was authorized");
 					return true;
 				}
 			}
 		}
+		log.warn("Hash was NOT authorized");
 		return false;
 	}
 
@@ -290,7 +357,7 @@ public class WebSession extends AbstractAuthenticatedWebSession implements IWebS
 		}
 		languageId = u.getLanguageId();
 		tz = getTimeZone(u);
-		ISO8601FORMAT = FastDateFormat.getInstance(ISO8601_FULL_FORMAT_STRING, tz);
+		iso8601Format = FastDateFormat.getInstance(ISO8601_FULL_FORMAT_STRING, tz);
 		setLocale(LocaleHelper.getLocale(u));
 		sdf = FormatHelper.getDateTimeFormat(u);
 	}
@@ -363,7 +430,7 @@ public class WebSession extends AbstractAuthenticatedWebSession implements IWebS
 	}
 
 	public Invitation getInvitation() {
-		return i;
+		return invitation;
 	}
 
 	public SOAPLogin getSoapLogin() {
@@ -383,7 +450,7 @@ public class WebSession extends AbstractAuthenticatedWebSession implements IWebS
 	}
 
 	public static FastDateFormat getIsoDateFormat() {
-		return get().ISO8601FORMAT;
+		return get().iso8601Format;
 	}
 
 	public static FastDateFormat getDateFormat() {
@@ -426,7 +493,7 @@ public class WebSession extends AbstractAuthenticatedWebSession implements IWebS
 	}
 
 	public String getClientTZCode() {
-		TimeZone _zone = browserTz;
+		TimeZone curZone = browserTz;
 		if (browserTz == null) {
 			try {
 				browserTz = getClientInfo().getProperties().getTimeZone();
@@ -439,15 +506,15 @@ public class WebSession extends AbstractAuthenticatedWebSession implements IWebS
 						}
 					}
 				}
-				_zone = browserTz;
+				curZone = browserTz;
 			} catch (Exception e) {
 				//no-op
 			}
 			if (browserTz == null) {
-				_zone = Calendar.getInstance(getLocale()).getTimeZone();
+				curZone = Calendar.getInstance(getLocale()).getTimeZone();
 			}
 		}
-		return _zone == null ? null : _zone.getID();
+		return curZone == null ? null : curZone.getID();
 	}
 
 	public static TimeZone getClientTimeZone() {
@@ -459,7 +526,7 @@ public class WebSession extends AbstractAuthenticatedWebSession implements IWebS
 		DashboardContext dashboardContext = getDashboardContext();
 		dashboard = (UserDashboard)dashboardContext.getDashboardPersister().load();
 		boolean existMyRoomWidget = false, existRssWidget = false, existAdminWidget = false;
-		boolean showMyRoomConfValue = cfgDao.getBool(CONFIG_MYROOMS_ENABLED, true) && cfgDao.getBool(CONFIG_DASHBOARD_SHOW_MYROOMS, false);
+		boolean showMyRoomConfValue = isMyRoomsEnabled() && cfgDao.getBool(CONFIG_DASHBOARD_SHOW_MYROOMS, false);
 		boolean showRssConfValue = cfgDao.getBool(CONFIG_DASHBOARD_SHOW_RSS, false);
 		boolean showAdminWidget = getRights().contains(User.Right.ADMIN);
 		boolean save = false;
@@ -525,11 +592,6 @@ public class WebSession extends AbstractAuthenticatedWebSession implements IWebS
 		if (save) {
 			dashboardContext.getDashboardPersister().save(dashboard);
 		}
-	}
-
-	@Override
-	public long getOmLanguage() {
-		return getLanguage();
 	}
 
 	private static void checkIsInvalid() {
